name:                gloss-demo
version:             0.1.0.0
synopsis:            Simple animation example in Gloss
homepage:            https://github.com/pbv/gloss-demo
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2018 Pedro Vasconcelos
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gloss-demo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random
  ghc-options:         -threaded -O2
